solc_ossfuzz_seed_corpus/test_sol/test_94bb8075472142c57f7f08b11cc2b179b1614fe72802dfab01cc092e71e27eeb_b99e2820f6e1e630f5d0bd07086f24da66c4c6f3_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(uint168 i0,bytes memory i1)  returns(bool o0,bool o1)
{
  {
  }
  {
o0 = (true || ((87030233297518799349226076623163706946513925218296692407348065822 / (31935076885165888726234828271199392348133310035682538797170009985 - (58022675618544348707989614288770672140911778465823088232612687687 / 83725192458105981104441623141755257382850782679879994987843448463))) <= 38646314702271948817624321073069379032190080949034356953285917281));


  }


}
function f1(bool i0,address i1)  returns(bytes12 o0)
{
}
pragma abicoder v2;
pragma solidity >= 0.0.0;
// ----
// TypeError 2271: (su0.sol:99-443): Operator <= not compatible with types rational_const 1214...(122 digits omitted)...1931 / 4456...(121 digits omitted)...9228 and int_const 3864...(57 digits omitted)...7281
